azure-apim-traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apimgateway
  annotations:
        kubernetes.io/ingress.class: traefik
        traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: api.bjd.demo
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 443
        path: /
  tls:
  - secretName: traefik-apim-cert
